# parquet_footer_parsing

./: Cargo.toml  README.md
src/: benchmark.rs  datagen.rs  file_type.rs  main.rs  parquet_file.rs
