[package]
name = "parquet_footer_parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.0.0"
parquet_56 = {  package = "parquet",  version = "56.0.0" }
# main from arrow-rs
parquet_57 = { package = "parquet",  git = "https://github.com/apache/arrow-rs.git", rev = "751b0822a7f0b2647c1c662131131b35f268bfef"}
# hacked version of parquet 57 that does not read statistics values
# https://github.com/alamb/arrow-rs/pull/54
parquet_57_no_stats = { package = "parquet",  git = "https://github.com/apache/arrow-rs.git", rev = "d24ac4fba7877b49ec54360e7baeb8669520bf04"}

tokio = { version = "1", features = ["full"] }
comfy-table = "7"
rand = "0.9"
tempfile= "3"
bytes = "1"

