[package]
name = "parquet_footer_parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.0.0"
parquet_56 = {  package = "parquet",  version = "56.0.0" }
# main from arrow-rs
parquet_57 = { package = "parquet",  git = "https://github.com/apache/arrow-rs.git", rev = "751b0822a7f0b2647c1c662131131b35f268bfef"}
# hacked version of parquet 57 that does not read statistics values
# https://github.com/apache/arrow-rs/pull/8630
parquet_57_no_stats = { package = "parquet",  git = "https://github.com/apache/arrow-rs.git", rev = "dc023f57ca4d83a317674a17cc7f36f5cf685d9a"}

tokio = { version = "1", features = ["full"] }
comfy-table = "7"
rand = "0.9"
tempfile= "3"
bytes = "1"

compact-thrift-parquet = "0.3.1"
compact-thrift-runtime = "0.2.0"
