[package]
name = "parquet_footer_parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.0.0"
parquet_56 = {  package = "parquet",  version = "56.0.0" }
# main from arrow-rs
parquet_57 = { package = "parquet",  version = "57.0.0" }
# hacked version of parquet 57 that does not read statistics values
# https://github.com/apache/arrow-rs/pull/8630
parquet_57_no_stats = { package = "parquet",  git = "https://github.com/apache/arrow-rs.git", rev = "2807919f8a9b7122b6b2e7f631244e9f960234de"}

tokio = { version = "1", features = ["full"] }
comfy-table = "7"
rand = "0.9"
tempfile= "3"
bytes = "1"

